tests/expected_invalid_parse_missing_failed_pattern_comma.diag.out
<input>:14:33: error: expected ',' between pattern bindings
            failed(MissingKey { key fallback }) => fallback,
                                    ^^^^^^^^
